# h33-substrate-verifier

./: .gitignore  Cargo.toml  LICENSE  README.md  vectors.json
benches/: verify.rs
examples/: verify_url.rs
src/: error.rs  headers.rs  lib.rs  main.rs  public_keys.rs  receipt.rs  signer.rs  substrate_layout.rs  types.rs  verifier.rs  verify.rs
tests/: integration.rs
