[package]
name = "h33-74-verifier"
version = "0.1.0"
edition = "2021"
description = "H33-74 standalone attestation verifier. Verify post-quantum signed substrates offline."
license = "MIT"
repository = "https://github.com/H33ai-postquantum/h33-74-verifier"

[dependencies]
pqcrypto-mldsa = "0.1"
pqcrypto-falcon = "0.3"
pqcrypto-sphincsplus = "0.7"
pqcrypto-traits = "0.3"
sha3 = "0.10"
constant_time_eq = "0.3"
serde_json = "1.0"
getrandom = "0.2"
zeroize = "1.7"

[profile.release]
opt-level = 3
lto = true
strip = true
